# pii

./: .gitlab-ci.yml  Dockerfile  README.md  app_presidio.py  makefile  pyproject.toml  requirements.txt  test.sh
.github/workflows/: publish-docker-image.yml
examples/: evaluation.py  evaluation_results.txt  presidio.py  response_from_server.py  transfomer_pipeline.py
presidio_analyzer/: recognizer_result.py
presidio_analyzer/conf/: default.yaml  default_analyzer.yaml  default_recognizers.yaml  spacy.yaml  spacy_multilingual.yaml  transformers.yaml
presidio_analyzer/nlp_engine/: nlp_engine_provider.py
tests/: test_app_presidio.py  test_service.py
